# autoplex

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Manifest.toml  Project.toml  README.md  file  pylintrc  pyproject.toml  start_settings.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: release.yml
.github/scripts/: average_test_durations.py
.github/workflows/: docker-publish.yml  docs.yml  ghcr-cleanup.yml  ghcr_cleanup.yml  pylint.yml  python-package.yml  python-publish.yml  python-tutorial.yml  update_devcontainer.yml
autoplex/auto/: __init__.py  debug.py  debugdata.py  flows.py  jobs.py
autoplex/auto/phonons/: flows.py  jobs.py
autoplex/auto/tests/: debug.py  test_auto.py  test_benchmark.py  test_datagen.py  test_fitting.py  test_flows.py
autoplex/auto/tutorials/: example_submission.py  startFromExistingPotential.py
autoplex/benchmark/: __init__.py  flows.py  jobs.py  utils.py
autoplex/benchmark/phonons/: flows.py  jobs.py  utils.py
autoplex/data/: __init__.py  flows.py  job.py  jobs.py  utils.py
autoplex/data/common/: flows.py  jobs.py  utils.py
autoplex/data/phonons/: __init__.py  flows.py  jobs.py  utils.py
autoplex/data/rss/: flows.py  jobs.py  utils.py
autoplex/fitting/: __init__.py  flows.py  gap-defaults.json  jobs.py  utils.py
autoplex/fitting/common/: flows.py  gap-defaults.json  jobs.py  mlip-defaults.json  mlip-rss-defaults.json  regularization.py  utils.py
autoplex/fitting/phonons/: flows.py  gap-defaults.json  jobs.py  utils.py
autoplex/fitting/rss/: README.md  __init__.py  flows.py  (+3 more)
autoplex/jobs/: mlip_fitting.py
autoplex/training_data/: flows.py  utils.py
configs/: create_configs.py  mlip_hypers.json  rss_config.yaml  rss_config_all.yaml
docs/: conf.py  glossary.rst  index.md
docs/_static/: custom.css
docs/about/: contributors.md  license.md
docs/dev/: contributing.md  dev_install.md
docs/reference/: autoplex.auto.flows.CompleteDFTvsMLBenchmarkWorkflow.rst  autoplex.auto.flows.DFTDataGenerationFlow.rst  autoplex.auto.flows.PhononDFTMLBenchmarkFlow.rst  autoplex.auto.flows.PhononDFTMLFitFlow.rst  autoplex.auto.flows.TYPE_CHECKING.rst  autoplex.auto.flows.rst  autoplex.auto.jobs.MLPhononMaker.rst  autoplex.auto.jobs.TYPE_CHECKING.rst  autoplex.auto.jobs.dft_phonopy_gen_data.rst  autoplex.auto.jobs.dft_random_gen_data.rst  autoplex.auto.jobs.get_iso_atom.rst  autoplex.auto.jobs.get_phonon_ml_calculation_jobs.rst  autoplex.auto.jobs.rst  autoplex.auto.rst  autoplex.benchmark.flows.PhononBenchmarkMaker.rst  autoplex.benchmark.flows.TYPE_CHECKING.rst  autoplex.benchmark.flows.rst  autoplex.benchmark.jobs.TYPE_CHECKING.rst  autoplex.benchmark.jobs.compute_bandstructure_benchmark_metrics.rst  autoplex.benchmark.jobs.rst  autoplex.benchmark.jobs.write_benchmark_metrics.rst  autoplex.benchmark.rst  autoplex.benchmark.utils.compare_plot.rst  autoplex.benchmark.utils.get_rmse.rst  autoplex.benchmark.utils.rmse_kdep_plot.rst  autoplex.benchmark.utils.rst  autoplex.data.flows.DFTPhononMaker.rst  autoplex.data.flows.IsoAtomMaker.rst  autoplex.data.flows.IsoAtomStaticMaker.rst  autoplex.data.flows.RandomStructuresDataGenerator.rst  autoplex.data.flows.TYPE_CHECKING.rst  autoplex.data.flows.TightDFTStaticMaker.rst  autoplex.data.flows.rst  autoplex.data.jobs.TYPE_CHECKING.rst  autoplex.data.jobs.generate_randomized_structures.rst  autoplex.data.jobs.phonon_maker_random_structures.rst  autoplex.data.jobs.rst  autoplex.data.rst  autoplex.data.utils.rst  autoplex.fitting.flows.MLIPFitMaker.rst  (+11 more)
docs/user/: .jobflowremote.md.swp  index.md  jobflowremote.md  mongodb.md  setup.md  test_project.yaml  tutorials.md
mlip-fitting/: README.md
mlip-fitting/fitting/: mlip_fitting.py  mlip_models.py  regularization.py  utilities.py
src/autoplex/: __init__.py  _version.py  settings.py
tests/: conftest.py  gap_file.xml  gap_file.xml.sparseX.GAP_2024_10_7_120_23_40_49_6941  gap_file.xml.sparseX.GAP_2024_10_7_120_23_40_53_5071  gap_file.xml.sparseX.GAP_2024_10_7_120_23_40_53_5072  phonon_band_structure.yaml  phonon_doc_si.json  phonon_dos.yaml  phonopy.yaml  quip_test.extxyz  quip_train.extxyz  test_mock_vasp.py
tests/auto/: debug.py  results_test.txt  test_auto.py  test_auto_flows.py  test_auto_jobs.py  test_fitting.py  test_flows.py
tests/benchmark/: test_benchmark_flows.py  test_benchmark_jobs.py  test_benchmark_utils.py
tests/data/: log.lammps  test_buildcell_jobs.py  test_datagen_flows.py  test_datagen_jobs.py  test_datagen_utils.py  test_sampling_jobs.py
tests/fitting/: test_fitting_flows.py  test_fitting_jobs.py  test_fitting_regularization.py  test_fitting_utils.py
tests/rss/: test_buildcell_jobs.py  test_data_preprocess_jobs.py  test_hookean.py  test_ml_fitting.py  test_rss.py  test_sampling_jobs.py  test_vasp_jobs.py  test_worklows.py
tests/test_data/: .pytest-split-durations  .pytest-split-durations-1  .pytest-split-durations-2  .pytest-split-durations-3  .pytest-split-durations-4  .pytest-split-durations-5  .pytest-split-durations-5.json  source_test_files.txt
tutorials/: README.md  example_submission.py  index.md  mock_vasp.py  rss_si_config.yaml  startFromExistingPotential.py  tutorial_phonon.ipynb  tutorial_rss.ipynb
(+548 files in other folders)
